Lab01/cloudformation/vpc-cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: |
  Tạo VPC, Public/Private Subnets,Internet Gateway, NAT Gateway, và Route Tables
Resources:
  # 1. TẠO VPC
  MainVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: cf-main-vpc

  # 2. TẠO SUBNETS PUBLIC & PRIVATE
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MainVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true # Tự động gán IP public cho public subnet
      Tags:
        - Key: Name
          Value: cf-public-subnet

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MainVPC
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false # Không gán IP public cho private subnet
      Tags:
        - Key: Name
          Value: cf-private-subnet

  # 3. TẠO INTERNET GATEWAY
  MainIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: cf-main-igw

  # Gắn IGW vào VPC
  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MainVPC
      InternetGatewayId: !Ref MainIGW

  # 4. TẠO NAT GATEWAY
  # Cần Elastic IP trước
  NatEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    DependsOn: GatewayAttachment # Đảm bảo IGW đã được gắn

  MainNGW:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIP.AllocationId
      SubnetId: !Ref PublicSubnet # NAT Gateway phải nằm ở Public Subnet
      Tags:
        - Key: Name
          Value: cf-main-ngw

  # 5. TẠO ROUTE TABLES (PUBLIC)
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MainVPC
      Tags:
        - Key: Name
          Value: cf-public-rt

  # Định tuyến 0.0.0.0/0 ra IGW
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MainIGW

  # Gắn Public RT vào Public Subnet
  PublicSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  # 6. TẠO ROUTE TABLES (PRIVATE)
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MainVPC
      Tags:
        - Key: Name
          Value: cf-private-rt

  # Định tuyến 0.0.0.0/0 ra NGW
  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref MainNGW

  # Gắn Private RT vào Private Subnet
  PrivateSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable
    
# Lấy Outputs
Outputs:
  VPCId:
    Description: ID của VPC chính
    Value: !Ref MainVPC
    Export:
      Name: !Sub ${AWS::StackName}-VPCId

  PublicSubnetId:
    Description: ID của Public Subnet
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub ${AWS::StackName}-PublicSubnetId

  PrivateSubnetId:
    Description: ID của Private Subnet
    Value: !Ref PrivateSubnet
    Export:
      Name: !Sub ${AWS::StackName}-PrivateSubnetId
